# application_for_sending_messages

./: READEME.md  README.md  group_fixture.json  pyproject.toml  users.json
config/: settings.py  urls.py
mailing_app/: admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
mailing_app/migrations/: 0001_initial.py  0002_alter_mailingrecipient_options_and_more.py  0003_alter_mailing_options_and_more.py
mailing_app/templates/mailing_app/: base.html  mailing_confirm_delete.html  mailing_form.html  mailing_item.html  mailings_attempts_list.html  mailings_list.html  message_confirm_delete.html  message_form.html  message_item.html  messages_list.html  recipient_confirm_delete.html  recipient_form.html  recipient_item.html  recipients_list.html
mailing_app/templates/mailing_app/includes/: inc_menu.html
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
users/templates/users/: login.html  user_form.html
